<resources>
    <string name="app_name">NewsApp</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="bookmark">Bookmark</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="united_states_of_america">United States of America</string>
    <string name="search_topics_and_articles">Search topics and articles</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid  password</string>
    <string name="invalid_account">Invalid account</string>
    <string name="Invalid_confirm_password">Invalid confirm password</string>
    <string name="password_and_confirm_password_are_not_the_same">password and confirm password are not the same</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">PassWord</string>
    <string name="confirm_password">Confirm PassWord</string>
    <string name="upload_file_error">upload file error</string>
    <string name="logout">Logout</string>
    <string name="title_bar_login">In progress to login</string>
    <string name="message_bar_login">Please wait few seconds..</string>
    <string name="comment">Comment</string>
    <string name="send_comment">Send comment..</string>
    <string name="dark_mode">DarkMode</string>
</resources>