<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <include
        android:id="@+id/toolbarLogin"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarLogin"
        app:layoutDescription="@xml/activity_login_motion_layout_scene">

        <androidx.cardview.widget.CardView
            android:id="@+id/btLogin"
            android:layout_width="@dimen/size_100"
            android:layout_height="@dimen/size_50"
            app:cardCornerRadius="@dimen/radius_30"
            app:cardElevation="@dimen/elevation_1" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_2"
            android:text="@string/login"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btLoginInRevealState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:foreground="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btRegister"
            android:layout_width="@dimen/size_100"
            android:layout_height="@dimen/size_50"
            app:cardCornerRadius="@dimen/radius_30"
            app:cardElevation="@dimen/elevation_1" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_2"
            android:text="@string/register"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            android:elevation="@dimen/elevation_2"
            android:hint="@string/email" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/etPass"
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            android:elevation="@dimen/elevation_1"
            android:hint="@string/password" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/etConfirmPass"
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            android:elevation="@dimen/elevation_2"
            android:hint="@string/confirm_password" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</RelativeLayout>